# PUMY

./: README.md  pyproject.toml
lab1/: ames_transformer.joblib  high_price_estimator.joblib  low_price_estimator.joblib  notebook.html  notebook.ipynb  price_estimator.joblib
lab2/: notebook.ipynb
lab7/: notebook.ipynb
